examples/test/testpolicy502.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy502
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key48: value47
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value24
          key0: value25
      podSelector:
        matchLabels:
          key37: value0
          key46: value46
